# syncmind

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  store.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/components/: RagLabTab.tsx  SearchTab.tsx  SettingsTab.tsx
core/: Cargo.toml
core/file-watcher/: Cargo.toml
core/file-watcher/src/: lib.rs
core/mcp-server/: Cargo.toml
core/mcp-server/src/: lib.rs  protocol.rs  server.rs  sse.rs  stdio.rs
core/mcp-server/tests/: integration.rs
core/rag-engine/: Cargo.toml
core/rag-engine/src/: chunker.rs  embedder.rs  error.rs  extractor.rs  lib.rs  reranker.rs
core/storage/: Cargo.toml
core/storage/src/: error.rs  lib.rs  models.rs  store.rs
core/syncmind/: Cargo.toml
core/syncmind-core/: Cargo.toml
core/syncmind-core/src/: config.rs  lib.rs  observability.rs  paths.rs  types.rs
core/syncmind-indexing/: Cargo.toml
core/syncmind-indexing/src/: lib.rs
core/syncmind/src/: main.rs
core/syncmind/tests/: cli.rs
docs/: vision.md
docs/examples/: claude_code_mcp.json  claude_desktop_config.json  quickstart.md
docs/manual/: the-command-palette-qa.md
docs/prd/: 001-headless-mcp-core.md  002-the-spine.md  003-the-command-palette.md
docs/spec/001-headless-mcp-core/: design.md  milestone-1-plan.md  milestone-2-plan.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-20-headless-mcp-core/: proposal.md  tasks.md
openspec/changes/archive/2026-05-20-headless-mcp-core/specs/: requirements.md
openspec/changes/archive/2026-05-20-phase1-completion/: proposal.md  tasks.md
openspec/changes/archive/2026-05-20-phase1-completion/specs/embedding-generation/: spec.md
openspec/changes/archive/2026-05-20-phase1-completion/specs/vector-storage/: spec.md
openspec/changes/archive/2026-05-20-the-command-palette/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-20-the-command-palette/specs/desktop-shell/: spec.md
openspec/changes/archive/2026-05-20-the-command-palette/specs/rag-lab/: spec.md
openspec/changes/archive/2026-05-20-the-command-palette/specs/settings-indexing/: spec.md
openspec/changes/archive/2026-05-20-the-spine/: design.md  tasks.md
openspec/changes/archive/2026-05-20-the-spine/specs/device-auth/: spec.md
openspec/changes/archive/2026-05-20-the-spine/specs/spine-deployment/: spec.md
openspec/changes/headless-mcp-core/: design.md  tasks.md
openspec/changes/phase1-completion/: design.md  tasks.md
openspec/changes/phase1-completion/specs/daemon-observability/: spec.md
openspec/changes/phase1-completion/specs/file-watching/: spec.md
openspec/changes/rag-retrieval-enhancement/: design.md  proposal.md  tasks.md
openspec/changes/rag-retrieval-enhancement/specs/hybrid-search/: spec.md
openspec/changes/rag-retrieval-enhancement/specs/retrieval-reranking/: spec.md
openspec/changes/rag-retrieval-enhancement/specs/semantic-chunking/: spec.md
openspec/changes/the-command-palette/: tasks.md
openspec/changes/the-command-palette/specs/command-palette/: spec.md
openspec/changes/the-spine/: proposal.md  tasks.md
openspec/changes/the-spine/specs/device-pairing/: spec.md
openspec/changes/the-spine/specs/mobile-media-ingestion/: spec.md
openspec/changes/the-spine/specs/sync-bundle-relay/: spec.md
openspec/specs/command-palette/: spec.md
openspec/specs/daemon-observability/: spec.md
openspec/specs/desktop-shell/: spec.md
openspec/specs/device-auth/: spec.md
openspec/specs/device-pairing/: spec.md
openspec/specs/embedding-generation/: spec.md
openspec/specs/file-watching/: spec.md
openspec/specs/mobile-media-ingestion/: spec.md
openspec/specs/rag-lab/: spec.md
openspec/specs/settings-indexing/: spec.md
openspec/specs/spine-deployment/: spec.md
openspec/specs/sync-bundle-relay/: spec.md
openspec/specs/vector-storage/: spec.md
scripts/: e2e-mcp-test.sh  e2e-phase1-realworld.sh
services/sync-gateway/: Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  spine.yaml
services/sync-gateway/cmd/spine/: main.go
services/sync-gateway/docs/examples/: spine-docker-compose.md
services/sync-gateway/docs/security/: spine-audit.md
services/sync-gateway/internal/config/: config.go
services/sync-gateway/internal/handler/: auth.go  auth_integration_test.go  auth_test.go  media.go  media_integration_test.go  pairing.go  pairing_test.go  sync.go  sync_integration_test.go
services/sync-gateway/internal/logger/: logger.go
services/sync-gateway/internal/metrics/: metrics.go
services/sync-gateway/internal/middleware/: auth.go  auth_test.go  logging.go  ratelimit.go  security.go
services/sync-gateway/internal/model/: bundle.go  device.go  migrations_test.go  pairing.go
services/sync-gateway/internal/pkg/crypto/: ed25519.go  jwt.go
services/sync-gateway/internal/pkg/websocket/: hub.go
services/sync-gateway/internal/scheduler/: cleanup.go
services/sync-gateway/migrations/: 00001_create_devices_table.sql  00002_create_pairing_sessions_table.sql  00003_create_sync_bundles_table.sql  00004_create_indexes.sql
services/sync-gateway/tests/load/: websocket_test.go
