[workspace]
members = [
    "mcp-server",
    "file-watcher",
    "rag-engine",
    "storage",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SyncMind Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/blkcor-bt/syncmind"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
