[package]
name = "syncmind-file-watcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
notify = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
