[package]
name = "syncmind-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true, optional = true }
syncmind-storage = { path = "../storage" }
syncmind-rag-engine = { path = "../rag-engine" }
syncmind-core = { path = "../syncmind-core" }
async-trait = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"

[features]
default = ["stdio"]
stdio = []
sse = ["dep:axum"]
