[package]
name = "syncmind-rag-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
pulldown-cmark = "0.12"
pdf-extract = "0.7"
thiserror = { workspace = true }
syncmind-core = { path = "../syncmind-core" }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"

[dev-dependencies]
tempfile = "3"
