[package]
name = "syncmind-rag-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1"
pdf-extract = "0.7"
thiserror = { workspace = true }
syncmind-core = { path = "../syncmind-core" }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = { workspace = true }
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
tokenizers = { workspace = true }
ndarray = { workspace = true }
parking_lot = { workspace = true }
fs2 = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
axum = { workspace = true }
