[package]
name = "syncmind"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "syncmind"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
syncmind-core = { path = "../syncmind-core" }
syncmind-storage = { path = "../storage" }
syncmind-rag-engine = { path = "../rag-engine" }
syncmind-file-watcher = { path = "../file-watcher" }
syncmind-indexing = { path = "../syncmind-indexing" }
syncmind-mcp-server = { path = "../mcp-server", features = ["sse"] }
notify = { workspace = true }

[dev-dependencies]
tempfile = "3"
