[package]
name = "syncmind"
version = "0.1.0"
edition = "2021"

[lib]
name = "syncmind_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
libc = "0.2"
serde_json = "1"
syncmind-core = { path = "../../../core/syncmind-core" }
syncmind-storage = { path = "../../../core/storage" }
syncmind-rag-engine = { path = "../../../core/rag-engine" }
syncmind-indexing = { path = "../../../core/syncmind-indexing" }
syncmind-file-watcher = { path = "../../../core/file-watcher" }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
